Add Math.js dependency

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,8 @@
   <div id="qunit-fixture"></div>
   <script src="qunit.js"></script>
   <script src="/testem.js"></script>
-  <script src="../assets/loader.js"></script>
+  <script src="/assets/loader.js"></script>
+  <script src="/vendor/math.min.js"></script>
   <script src="/amd/quadrotor.amd.js"></script>
   <script src="/amd/quadrotor-tests.amd.js"></script>
 
